fix wrapping a little

--- a/css/style.css
+++ b/css/style.css
@@ -256,11 +256,13 @@ a:active {
 
 .tables {
 	display: flex;
+  flex-wrap: nowrap;
 	margin-left: 20vw;
 	margin-right: 20vw;
 }
 .tables ul {
 	color: var(--font-pri);
+  flex: 1 0 auto;
 	display: inline-block;
 	font-size: 25px;
 	font-weight: bold;
@@ -269,7 +271,6 @@ a:active {
 	margin: 10px;
 	padding: 0;
 	text-align: center;
-	width: 100%;
 }
 
 .links {
